$Id: History,v 1.13 2002-07-18 14:55:49 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

July, 18th, 2002 M.Dressel 
   change the strategy for importance sampling:
	- G4VIStore: new function:
		IsKnown(const G4PTouchableKey &ptk)
		to tell if a cell (G4PTouchableKey) is known in the
		store
	- no biasing is applied between cells that are not known by 
	  the G4IStore and it's neighbors.
	- importance valu 0 is allowed to flag that no biasing should
	  be done betweeen the cell and it's neighbors.
    change the G4PArallelNavigator: 
        - using G4TouchableHanle
        - and LocateGlobalPointAndSetup

	  
July, 11th, 2002 M.Dressel 
  added comments in new classes

July, 11th, 2002 M.Dressel - internal-2-geombias-V04-01-01
  added clases for contruction of a simple geometry with 
  importance values and messengers.

July, 10th, 2002 M.Dressel - internal-1-geombias-V04-01-01
 change in G4Sigma: the sum over the weights is returned by GetWsum 
 (before it was GetSumOfWeights) and the weighted sum over x is returned  
 by GetWXsum().


May, 31th, 2002  M.Dressel - geombias-V04-00-04
- change name ImportanceSampler to ImportanceSplitExaminer

May, 30th, 2002  M.Dressel