@@ -21,67 +21,37 @@
 // ********************************************************************
 //
 //
-// $Id: G4ParallelWorld.cc,v 1.3 2002-08-13 10:03:30 dressel Exp $
+// $Id: G4VCellScorer.hh,v 1.1 2002-08-13 10:03:29 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
-// GEANT 4 class source file
+// Class G4VCellScorer
 //
-// G4ParallelWorld.cc
+// Class description:
 //
+// This is an interface for an object which does scoring for one cell
+// of a geometry.
+// The cell may be a physical volume or replica in the mass or a 
+// parallel geometry.
+// 
+// Author: Michael Dressel (Michael.Dressel@cern.ch)
 // ----------------------------------------------------------------------
 
-#include "G4ParallelWorld.hh"
-#include "G4ParallelStepper.hh"
-#include "G4ParallelNavigator.hh"
-#include "G4VPhysicalVolume.hh"
+#ifndef G4VCellScorer_hh
+#define G4VCellScorer_hh G4VCellScorer_hh
 
-G4ParallelWorld::G4ParallelWorld(G4VPhysicalVolume &worldvolume)
- : fWorldVolume(&worldvolume),
-   fPstepper(new G4ParallelStepper),
-   fPdriver(new G4ParallelNavigator(*fWorldVolume))
-{}
+class G4Step;
+class G4PTouchableKey;
 
-G4ParallelWorld::~G4ParallelWorld()
-{
-  delete fPdriver;
-  delete fPstepper;
-}
+class G4VCellScorer {
+public:  
+  virtual  ~G4VCellScorer(){}
+  virtual void ScoreAnExitingStep(const G4Step &aStep, 
+				  G4PTouchableKey ptk) = 0;
+  virtual void ScoreAnEnteringStep(const G4Step &aStep, 
+				   G4PTouchableKey ptk) = 0;
+  virtual void ScoreAnInVolumeStep(const G4Step &aStep, 
+				   G4PTouchableKey ptk) = 0;
+};
 
-G4ParallelWorld::G4ParallelWorld(const G4ParallelWorld &rhs)
- : fWorldVolume(rhs.GetWorldVolume())
-{
-   fPstepper = new G4ParallelStepper;
-   G4ParallelNavigator *pn = new G4ParallelNavigator(*fWorldVolume);
-   pn->SetVerboseity(2);
-   fPdriver = pn;
-   
-}
-
-G4ParallelWorld &G4ParallelWorld::operator=(const G4ParallelWorld &rhs)
-{
-  if (this!=&rhs) {
-
-    fWorldVolume = rhs.GetWorldVolume();
-    fPstepper = new G4ParallelStepper;
-    fPdriver = new G4ParallelNavigator(*fWorldVolume);
-  }
-  return *this;
-}
-
-
-G4VPhysicalVolume *G4ParallelWorld::GetWorldVolume() const
-{
-  return fWorldVolume;
-}
-
-
-G4VParallelStepper &G4ParallelWorld::GetParallelStepper()
-{
-  return *fPstepper;
-}
-
-G4VPGeoDriver &G4ParallelWorld::GetGeoDriver()
-{
-  return *fPdriver;
-}
+#endif
