@@ -21,67 +21,32 @@
 // ********************************************************************
 //
 //
-// $Id: G4ParallelWorld.cc,v 1.3 2002-08-13 10:03:30 dressel Exp $
+// $Id: G4VCellScorerStore.hh,v 1.1 2002-08-13 10:03:29 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
-// GEANT 4 class source file
+// Class G4VCellScorerStore
 //
-// G4ParallelWorld.cc
+// Class description:
 //
+// This class describes the interface for a store for 
+// G4VCellScorer objects. It is used by the class 
+// G4CellStoreScorer to score the G4CellScorer objects per cell.
+// 
+// Author: Michael Dressel (Michael.Dressel@cern.ch)
 // ----------------------------------------------------------------------
 
-#include "G4ParallelWorld.hh"
-#include "G4ParallelStepper.hh"
-#include "G4ParallelNavigator.hh"
-#include "G4VPhysicalVolume.hh"
+#ifndef G4VCellScorerStore_hh
+#define G4VCellScorerStore_hh G4VCellScorerStore_hh
 
-G4ParallelWorld::G4ParallelWorld(G4VPhysicalVolume &worldvolume)
- : fWorldVolume(&worldvolume),
-   fPstepper(new G4ParallelStepper),
-   fPdriver(new G4ParallelNavigator(*fWorldVolume))
-{}
+class G4VCellScorer;
+class G4PTouchableKey;
 
-G4ParallelWorld::~G4ParallelWorld()
-{
-  delete fPdriver;
-  delete fPstepper;
-}
-
-G4ParallelWorld::G4ParallelWorld(const G4ParallelWorld &rhs)
- : fWorldVolume(rhs.GetWorldVolume())
-{
-   fPstepper = new G4ParallelStepper;
-   G4ParallelNavigator *pn = new G4ParallelNavigator(*fWorldVolume);
-   pn->SetVerboseity(2);
-   fPdriver = pn;
-   
-}
-
-G4ParallelWorld &G4ParallelWorld::operator=(const G4ParallelWorld &rhs)
-{
-  if (this!=&rhs) {
-
-    fWorldVolume = rhs.GetWorldVolume();
-    fPstepper = new G4ParallelStepper;
-    fPdriver = new G4ParallelNavigator(*fWorldVolume);
-  }
-  return *this;
-}
+class G4VCellScorerStore {
+public:
+  virtual ~G4VCellScorerStore(){}
+  virtual G4VCellScorer *GetCellScore(G4PTouchableKey ptk) = 0;
+};
 
 
-G4VPhysicalVolume *G4ParallelWorld::GetWorldVolume() const
-{
-  return fWorldVolume;
-}
-
-
-G4VParallelStepper &G4ParallelWorld::GetParallelStepper()
-{
-  return *fPstepper;
-}
-
-G4VPGeoDriver &G4ParallelWorld::GetGeoDriver()
-{
-  return *fPdriver;
-}
+#endif
