@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4ParallelNavigator.cc,v 1.7 2002-07-29 15:56:20 dressel Exp $
+// $Id: G4ParallelNavigator.cc,v 1.8 2002-08-13 10:03:30 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
@@ -38,12 +38,15 @@
 #include "G4Navigator.hh"
 #include "G4PTouchableKey.hh"
 #include "G4VParallelStepper.hh"
+#include "G4Pstring.hh"
 
 G4ParallelNavigator::G4ParallelNavigator(G4VPhysicalVolume &aWorldVolume)
   : fNavigator(*(new G4Navigator)), 
   fNlocated(0),
-  fMaxShiftedTrys(10)  
+  fMaxShiftedTrys(10),
+  fVerbose(1)
 {
+  //  fNavigator.SetVerboseLevel(6);
   fNavigator.SetWorldVolume(&aWorldVolume);
   fCurrentTouchableH = fNavigator.CreateTouchableHistory();
 }
@@ -67,8 +70,12 @@ LocateOnBoundary(const G4ThreeVector &aPosition,
 					       true);
   fNlocated++;
  */
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "LOB: " << aPosition << ", " << aDirection << G4endl;
+  }
   fNavigator.SetGeometricallyLimitedStep();
-  Locate(aPosition, aDirection, false, true);
+  Locate(aPosition, aDirection, true, false);
   //  since the track crosses a boundary ipdate stepper 
   return GetCurrentTouchableKey();
 }
@@ -79,7 +86,10 @@ ComputeStepLengthInit(const G4ThreeVector &aPosition,
 {
   // initialization
   fNlocated = 0;
-
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "CSInit: " << aPosition << ", " << aDirection << G4endl;
+  }
   Locate(aPosition, aDirection, false, false);
   return GetStepLength("ComputeStepLengthInit",
 			 aPosition, aDirection);
@@ -93,11 +103,15 @@ ComputeStepLengthCrossBoundary(const G4ThreeVector &aPosition,
     Error("ComputeStepLengthCrossBoundary: no location done before call",
 	  aPosition, aDirection);
   }
-
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "CSCB: " << aPosition << ", " << aDirection << G4endl;
+  }
   // if the track is on boundary the LocateOnBoundary was called
   // in the DOIT of the ParalleTransport
 
-
+  // but location in volume overcomes a problem with spheres
+  //  fNavigator.LocateGlobalPointWithinVolume(aPosition);
   return  GetStepLength("ComputeStepLengthCrossBoundary",
 			 aPosition, aDirection);
 }
@@ -111,7 +125,10 @@ ComputeStepLengthInVolume(const G4ThreeVector &aPosition,
     Error("ComputeStepLengthInVolume, no location done before call", 
 	  aPosition, aDirection);
   }
-
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "CSinV: " << aPosition << ", " << aDirection << G4endl;
+  }
   // if the track is not on the boundary and it's
   // not the first step, the location must be inside the 
   // volume 
@@ -129,7 +146,10 @@ void G4ParallelNavigator::Locate(const G4ThreeVector &aPosition,
 				 G4bool historysearch,
 				 G4bool useDirection)
 {
-
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "Locate: " << aPosition << ", " << aDirection << G4endl;
+  }
   fNavigator.LocateGlobalPointAndSetup( aPosition, 
 					&aDirection, 
 					historysearch, 
@@ -146,11 +166,15 @@ G4double G4ParallelNavigator::
 GetStepLength(const G4String methodname,
 	      const G4ThreeVector &aPosition, 
 	      const G4ThreeVector &aDirection) {
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "GetSL: " << aPosition << ", " << aDirection << G4endl;
+  }
   G4double newSafety;    
   G4double stepLength = fNavigator.ComputeStep( aPosition, aDirection,
 						kInfinity, newSafety);
   // if stepLength = 0 try shifting
-  if (stepLength<=0.) {
+  if (stepLength<=2*kCarTolerance) {
     stepLength  = 
       ComputeStepLengthShifted(methodname,
 			       aPosition, aDirection);
@@ -162,11 +186,15 @@ G4double G4ParallelNavigator::
 GetStepLengthUseLocate(const G4String methodname,
 	      const G4ThreeVector &aPosition, 
 	      const G4ThreeVector &aDirection) {
+  if (fVerbose>=2) {
+    G4cout.precision(12);
+    G4cout << "GetSLuseLocate: " << aPosition << ", " << aDirection << G4endl;
+  }
   G4double newSafety;    
   G4double stepLength = fNavigator.ComputeStep( aPosition, aDirection,
 						kInfinity, newSafety);
   // if stepLength = 0 try locate
-  if (stepLength<=0.) {
+  if (stepLength<=2*kCarTolerance) {
     Locate(aPosition, aDirection, true, true);    
     stepLength  = GetStepLength(methodname + 
 				"form GetStepLengthUseLocate",
@@ -183,28 +211,32 @@ ComputeStepLengthShifted(const G4String &m,
 			 const G4ThreeVector &aPosition, 
 			 const G4ThreeVector &aDirection)
 {
-  G4cerr << "G4ParallelNavigator::ComputeStepLengthShifted: invoked by: "
-	 << m << G4endl;
+  if (fVerbose>=1) {
+    G4cout.precision(12);
+    G4cout << "G4ParallelNavigator::ComputeStepLengthShifted: invoked by: "
+	   << m << G4endl;
+  }
   G4ThreeVector shift_pos(aPosition);
   shift_pos+=G4ThreeVector(Shift(aDirection.x()), 
 			   Shift(aDirection.y()), 
 			   Shift(aDirection.z()));
   G4double stepLength = 0.;
   G4int trys = 0;
-  while (stepLength<=0 && trys < fMaxShiftedTrys) {
-    G4cerr << "G4ParallelNavigator::ComputeStepLengthShifted: trys = "
-	   << ++trys << G4endl;
-    G4cerr << "shifted position: " << shift_pos 
-	   << ", direction: " << aDirection << G4endl;
-    Locate(shift_pos, aDirection, true, true);
+  while (stepLength<=2*kCarTolerance && trys < fMaxShiftedTrys) {
+    if (fVerbose>=1) {
+      G4cout << "G4ParallelNavigator::ComputeStepLengthShifted: trys = "
+	     << ++trys << G4endl;
+      G4cout << "shifted position: " << shift_pos 
+	     << ", direction: " << aDirection << G4endl;
+    }
+    Locate(shift_pos, aDirection, true, true); // to get into the correct volume
     G4double newSafety;
-    stepLength = fNavigator.ComputeStep( shift_pos, aDirection,
+    fNavigator.LocateGlobalPointWithinVolume(aPosition);    // to place at the correct position
+    stepLength = fNavigator.ComputeStep( aPosition, aDirection,
 					 kInfinity, newSafety);
   }
-  if (stepLength<=0.0) {
-    G4std::ostrstream os;
-    os << "still got stepLength<=0.0: " << shift_pos << '\0' << G4endl;
-    Error(os.str() , aPosition, aDirection);
+  if (stepLength<=kCarTolerance) {
+    Error("still got stepLength<=kCarTolerance: " + str(shift_pos) + "\n", aPosition, aDirection);
   } 
   return stepLength;
 }
@@ -219,9 +251,9 @@ void G4ParallelNavigator::Error(const G4String &m,
                                 const G4ThreeVector &pos,
                                 const G4ThreeVector &dir)
 {
-  G4cerr << "ERROR - G4ParallelNavigator::" << m << G4endl;
-  G4cerr << "aPosition: " << pos << G4endl;
-  G4cerr << "dir: " << dir << G4endl;
+  G4cout << "ERROR - G4ParallelNavigator::" << m << G4endl;
+  G4cout << "aPosition: " << pos << G4endl;
+  G4cout << "dir: " << dir << G4endl;
   G4Exception("Program aborted.");
 }
 
